<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Climbing Diary</string>
    <string name="climbing_day">Climbing Day</string>
    <string name="action_settings">Settings</string>
    <string name="add_entry">Add Entry</string>
    <string name="add_ascent">Add Ascent</string>
    <string name="add_route">Add Route</string>
    <string name="edit_ascent">Edit Ascent</string>
    <string name="edit_route">Edit Route</string>
    <string name="date">Date</string>
    <string name="type">Type</string>
    <string name="place">Place</string>
    <string name="visits">Visits</string>
    <string name="grade">Grade</string>
    <string name="grade_abbrv">Gr.</string>
    <string name="route">Route</string>
    <string name="routes">Routes</string>
    <string name="name">Name</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="notes">Notes</string>
    <string name="section_diary">Diary</string>
    <string name="section_places">Places</string>
    <string name="section_routes">Routes</string>
    <string name="section_ascents">Ascents</string>
    <string name="section_stats">Stats</string>
    <string name="dialog_remove_entry">Remove this diary entry?</string>
    <string name="dialog_delete_route">Deleting this route will also remove all related ascents. Continue?</string>
    <string name="dialog_delete_ascent">Delete this ascent?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="number_abbrv">No.</string>
    <string name="status">Status</string>
    <string name="best">Best</string>
    <string name="route_details">Route Details</string>
    <string name="list_of_ascents">List of Ascents</string>
    <string name="crag_pyramid">Crag Pyramid</string>
    <string name="wall_pyramid">Wall Pyramid</string>
    
</resources>
